--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(EvaluateConnections)
 export(GenerateEdgeWeights)
 export(GenerateNetworkPaths)
 export(InboundOutboundPlot)
+export(NetworkTreePlot)
 export(PlotTopLigands)
+import(ggplot2)
 importFrom(foreach,"%dopar%")
 importFrom(igraph,layout_in_circle)
 importFrom(magrittr,"%>%")
